--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE HTML>
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
+  <!-- modified to  your name  -->
   <title>Kai Yao</title>
-  
+
   <meta name="author" content="Kai Yao">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  
+
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
-	<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌐</text></svg>">
+	<link rel="icon" type="image/png" href="images/tab_icon.png">
 </head>
 
 <script type="text/javascript">
@@ -48,7 +48,6 @@
   }
 </script>
 
-
 <body>
   <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
     <tr style="padding:0px">
@@ -63,17 +62,16 @@
                     href="http://www.premilab.com/KaizhuHUANG.ashx">Kaizhu Huang</a> at <a
                     href="https://www.liverpool.ac.uk">University of Liverpool</a>. My research background lies in
               computer vision and machine learning.
-            </p>
+              </p>
               <p>
                 <i>
                   <!-- Here is my quote. -->
                   <!-- Specifically, I am interested in building machine learning algorithms for visual tasks with minimum human supervision. -->
                 </i>
-            <p>
+              </p>
               I have been working on some research topics including unsupervised learning, domain generalization, domain
               adaptation, and image generation. Previously, I completed B.Eng. at Xi'an Jiaotong-Liverpool University at
               2018.
-            </p>
             <p style="text-align:center">
               <a href="mailto:kai.yao19@student.xjtlu.edu.cn">Email</a> &nbsp/&nbsp
               <a href="data/CV.pdf">CV</a> &nbsp/&nbsp
@@ -82,18 +80,26 @@
             </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <img style="width:100%;max-width:100%" alt="profile photo" src="images/kaiyao.png">
+              <img style="width:100;max-width:100" alt="profile photo" src="images/kaiyao.png">
             </td>
           </tr>
         </tbody></table>
-  <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+
+        <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
         <tbody><tr><td>
             <heading>News</heading>
             <ul>
-                <li>Jul 2022 - x022.</li>
+                <li>Jul 2022 - Our paper about Open Compound Domain Adaptation accepted in ECCV 2022.</li>
+                <li>Jun 2022 - We uploaded our recent work on combining <a href="https://arxiv.org/pdf/2206.00181.pdf">Active Learning with Domain Adaptation</a> for Semantic Segmentation task.
+                <li>Jul 2021 - One paper accepted in ICCV 2021. This work deals with a joint framework on unsupervised learning of monocular depth and motion field estimation.</li>
+                <li>May 2021 - I started my internship at <a href="https://www.bosch.com/">Robert Bosch GmbH</a> working on domain adaptive multi-camera object detection.
                 <li> <a href="javascript:toggle_vis('news')">show more</a> </li>
                 <div id="news" style="display:none">
-              <li>Mar 2018 - Ix!</li>
+              <li>Dec 2020 - I was so honored to be the winner of the <a href="assets/qualcomm2020.jpg">Qualcomm Innovation Fellowship!</a>
+              <li>Jul 2020 - One paper accepted in ECCV 2020.</li>
+              <li>Mar 2020 - One paper accepted in CVPR 2020 as an oral presentation! See the <a href="https://youtu.be/x1KLka4iQlo">presentation video</a>.</li>
+              <li>Mar 2019 - One paper accepted in CVPR 2019.</li>
+              <li>Mar 2018 - I started my PhD course at KAIST RCV Lab!</li>
               </div>
             </ul>
         </td></tr>
@@ -109,6 +115,7 @@
         </tr>
       </tbody></table>
 
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
    <!----------------------------------- SLAug (AAAI'22) ------------------------------------------------->
           <tr onmouseout="mlbpm_stop()" onmouseover="mlbpm_start()">
             <td style="padding:20px;width:25%;vertical-align:middle">
@@ -132,10 +139,9 @@
                 <papertitle>Rethinking Data Augmentation for Single-source Domain Generalization in Medical Image Segmentation</papertitle>
               </a>
               <br>
-              <strong>Fei Pan</strong>,
-              <a href="">Sungsu Hur</a>,<a href="https://sites.google.com/site/seokjucv">Seokju Lee</a>,
-              <a href="https://sites.google.com/site/jskimcv/">Junsik Kim</a>,
-              <a href="https://scholar.google.co.kr/citations?user=XA8EOlEAAAAJ&hl=en">In So Kweon</a>
+              <strong>Kai Yao</strong>,
+              <a href="">Zixian Su</a>,
+                <a href="https://scholar.google.com/citations?user=E-Mcb5AAAAAJ">Seokju Lee</a>,
               <br>
               <em>Association for the Advancement of Artificial Intelligence (AAAI)</em>, 2023
               <br>
@@ -148,8 +154,10 @@
               </p>
             </td>
           </tr>
-</tbody></table>
-         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+
+        </tbody></table>
+
+        <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
           <tbody><tr>
             <td>
             <br>
@@ -164,4 +172,5 @@
     </tr>
   </table>
 </body>
+
 </html>
