--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
                     <td style="padding:2.5%;width:63%;vertical-align:middle">
                         <p style="text-align:center">
                             <name>Kai Yao 姚 凯</name>
+                            </p>
+                        <p style="text-align:center">
+                            Kai dot Yao at liverpool dot ac dot uk
                         </p>
                         <p> I am a Ph.D. student (2019.12-2023.12) advised by Prof. <a
                                 href="http://www.premilab.com/KaizhuHUANG.ashx">Kaizhu Huang</a> and Prof. <a
@@ -81,7 +84,6 @@
                         domain adaptation, and image generation. Previously, I completed B.Eng. at Xi'an
                         Jiaotong-Liverpool University.
                         <p style="text-align:center">
-                            <a href="mailto:kai.yao19@student.xjtlu.edu.cn">Email</a> &nbsp/&nbsp
                             <a href="data/CV.pdf">CV</a> &nbsp/&nbsp
                             <a href="https://scholar.google.com/citations?hl=en&user=pnsLGLMAAAAJ">Google Scholar</a>
                             &nbsp/&nbsp
