--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                             <a href="https://www.xjtlu.edu.cn/en/departments/academic-departments/intelligent-science/staff/xi-yang01">Xi Yang</a>,
                             <a href="http://www.premilab.com/QiufengWANG.ashx">Qiufeng Wang</a>,
                             <a href="https://www.xjtlu.edu.cn/zh/departments/academic-departments/industrial-design/staff/jie-sun">Jie Sun</a>,
-                            <a href="https://ee.kaist.ac.kr/en/professor/12135/">Kaizhu Huang</a>
+                            <a href="http://www.premilab.com/KaizhuHUANG.ashx">Kaizhu Huang</a>
                             <br>
                             (*equal contribution)
                             <br>
@@ -227,7 +227,7 @@
                             <a href="https://www.xjtlu.edu.cn/en/departments/academic-departments/intelligent-science/staff/xi-yang01">Xi Yang</a>,
                             <a href="https://www.xjtlu.edu.cn/zh/departments/academic-departments/industrial-design/staff/jie-sun">Jie Sun</a>,
                             Rui Zhang,
-                            <a href="https://ee.kaist.ac.kr/en/professor/12135/">Kaizhu Huang</a>
+                            <a href="http://www.premilab.com/KaizhuHUANG.ashx">Kaizhu Huang</a>
                             <br>
                             (*equal contribution)
                             <br>
@@ -275,7 +275,7 @@
                             <br>
                             <strong>Kai Yao*</strong>,
                             <a href="https://scholar.google.com/citations?user=E-Mcb5AAAAAJ">Zixian Su*</a>,
-                            <a href="https://ee.kaist.ac.kr/en/professor/12135/">Kaizhu Huang</a>,
+                            <a href="http://www.premilab.com/KaizhuHUANG.ashx">Kaizhu Huang</a>,
                             <a href="https://www.xjtlu.edu.cn/en/departments/academic-departments/intelligent-science/staff/xi-yang01">Xi Yang</a>,
                             <a href="https://www.xjtlu.edu.cn/zh/departments/academic-departments/industrial-design/staff/jie-sun">Jie Sun</a>,
                             Amir Hussain,
@@ -321,7 +321,7 @@
                             <br>
                             <a href="https://www.xjtlu.edu.cn/zh/departments/academic-departments/industrial-design/staff/jie-sun">Jie Sun</a>,
                             <strong>Kai Yao</strong>,
-                            <a href="https://ee.kaist.ac.kr/en/professor/12135/">Kaizhu Huang</a>,
+                            <a href="http://www.premilab.com/KaizhuHUANG.ashx">Kaizhu Huang</a>,
                             <a href="https://scholar.google.com/citations?hl=zh-CN&user=EKdoAtgAAAAJ">Dejian Huang</a>,
                             <br>
                             <em>Materials Today: Proceedings</em>, 2022
@@ -362,7 +362,7 @@
                             </a>
                             <br>
                             <strong>Kai Yao</strong>,
-                            <a href="https://ee.kaist.ac.kr/en/professor/12135/">Kaizhu Huang</a>,
+                            <a href="http://www.premilab.com/KaizhuHUANG.ashx">Kaizhu Huang</a>,
                             <a href="https://www.xjtlu.edu.cn/zh/departments/academic-departments/industrial-design/staff/jie-sun">Jie Sun</a>,
                             Amir Hussain,
                             Curran Jude
@@ -406,7 +406,7 @@
                             <br>
                             <strong>Kai Yao</strong>,
                             <a href="https://www.xjtlu.edu.cn/zh/departments/academic-departments/industrial-design/staff/jie-sun">Jie Sun</a>,
-                            <a href="https://ee.kaist.ac.kr/en/professor/12135/">Kaizhu Huang</a>,
+                            <a href="http://www.premilab.com/KaizhuHUANG.ashx">Kaizhu Huang</a>,
                             Lingzhi Jing,
                             <a href="https://scholar.google.com/citations?user=DC9Ytm4AAAAJ">Hang Liu</a>,
                             <a href="https://scholar.google.com/citations?hl=zh-CN&user=EKdoAtgAAAAJ">Dejian Huang</a>,
@@ -447,7 +447,7 @@
                             </a>
                             <br>
                             <strong>Kai Yao</strong>,
-                            <a href="https://ee.kaist.ac.kr/en/professor/12135/">Kaizhu Huang</a>,
+                            <a href="http://www.premilab.com/KaizhuHUANG.ashx">Kaizhu Huang</a>,
                             <a href="https://www.xjtlu.edu.cn/zh/departments/academic-departments/industrial-design/staff/jie-sun">Jie Sun</a>,
                             Curran Jude
                             <br>
@@ -526,7 +526,7 @@
                             </a>
                             <br>
                             <strong>Kai Yao</strong>,
-                            <a href="https://ee.kaist.ac.kr/en/professor/12135/">Kaizhu Huang</a>,
+                            <a href="http://www.premilab.com/KaizhuHUANG.ashx">Kaizhu Huang</a>,
                             <a href="https://www.xjtlu.edu.cn/zh/departments/academic-departments/industrial-design/staff/jie-sun">Jie Sun</a>,
                             Lingzhi Jing,
                             <a href="https://scholar.google.com/citations?hl=zh-CN&user=EKdoAtgAAAAJ">Dejian Huang</a>,
@@ -646,7 +646,7 @@
                                 </papertitle>
                             </a>
                             <br>
-                            <strong>Kai Yao</strong>, <a href="https://ee.kaist.ac.kr/en/professor/12135/">Kaizhu Huang</a>, Rui Zhang, Amir Hussain
+                            <strong>Kai Yao</strong>, <a href="http://www.premilab.com/KaizhuHUANG.ashx">Kaizhu Huang</a>, Rui Zhang, Amir Hussain
                             <br>
                             <em>International Conference on Neural Information Processing (ICONIP)</em>, 2018
                             <p></p>
