--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         </p>
                     </td>
                     <td style="padding:2.5%;width:40%;max-width:40%">
-                        <img style="width:100%;max-width:100%" alt="profile photo" src="images/kaiyao.png">
+                        <img style="width:100%;max-width:100%" alt="profile photo" src="images/kaiyao.jpg">
                     </td>
                 </tr>
                 </tbody>
