--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                         <td style="padding:20px;width:25%;vertical-align:middle">
                             <div class="one">
                                 <div class="two" id='slaug_image'>
-                                    <img src='images/aaai23_slaug.png' width="160"></div>
+                                    <img src='images/aaai23_slaug_after.png' width="160"></div>
                                 <img src='images/aaai23_slaug.png' width="160">
                             </div>
                             <script type="text/javascript">
@@ -203,7 +203,7 @@
                         <td style="padding:20px;width:25%;vertical-align:middle">
                             <div class="one">
                                 <div class="two" id='queryotr_image'>
-                                    <img src='images/eccv22_queryotr.png' width="160"></div>
+                                    <img src='images/eccv22_queryotr_after.png' width="160"></div>
                                 <img src='images/eccv22_queryotr.png' width="160">
                             </div>
                             <script type="text/javascript">
@@ -252,7 +252,7 @@
                         <td style="padding:20px;width:25%;vertical-align:middle">
                             <div class="one">
                                 <div class="two" id='daru_image'>
-                                    <img src='images/jbhi22_darunet.png' width="160"></div>
+                                    <img src='images/jbhi22_darunet_after.png' width="160"></div>
                                 <img src='images/jbhi22_darunet.png' width="160">
                             </div>
                             <script type="text/javascript">
@@ -340,7 +340,7 @@
                         <td style="padding:20px;width:25%;vertical-align:middle">
                             <div class="one">
                                 <div class="two" id='pun_image'>
-                                    <img src='images/arxiv_pointnunet.png' width="160"></div>
+                                    <img src='images/arxiv_pointnunet_after.png' width="160"></div>
                                 <img src='images/arxiv_pointnunet.png' width="160">
                             </div>
                             <script type="text/javascript">
@@ -383,7 +383,7 @@
                         <td style="padding:20px;width:25%;vertical-align:middle">
                             <div class="one">
                                 <div class="two" id='ana_image'>
-                                    <img src='images/IJB21_adgan.png' width="160"></div>
+                                    <img src='images/IJB21_adgan_after.png' width="160"></div>
                                 <img src='images/IJB21_adgan.png' width="160">
                             </div>
                             <script type="text/javascript">
@@ -425,7 +425,7 @@
                         <td style="padding:20px;width:25%;vertical-align:middle">
                             <div class="one">
                                 <div class="two" id='adgan_image'>
-                                    <img src='images/arxiv_adgan.png' width="160"></div>
+                                    <img src='images/arxiv_adgan_after.png' width="160"></div>
                                 <img src='images/arxiv_adgan.png' width="160">
                             </div>
                             <script type="text/javascript">
