--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
                         domain adaptation, and image generation. Previously, I completed B.Eng. at Xi'an
                         Jiaotong-Liverpool University.
                         <p style="text-align:center">
-                            <a href="data/CV.pdf">CV</a> &nbsp/&nbsp
+                            <a href="data/CV.pdf">English CV</a> &nbsp/&nbsp
+                            <a href="data/CV_CN.pdf">Chinese CV</a> &nbsp/&nbsp
                             <a href="https://scholar.google.com/citations?hl=en&user=pnsLGLMAAAAJ">Google Scholar</a>
                             &nbsp/&nbsp
                             <a href="https://github.com/Kaiseem/">Github</a>
