--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                             Kai dot Yao at liverpool dot ac dot uk
                         </p>
                         <p> I am a Ph.D. student (2019.12-2023.12) advised by Prof. <a
-                                href="http://www.premilab.com/KaizhuHUANG.ashx">Kaizhu Huang</a> and Prof. <a
-                                href="https://www.xjtlu.edu.cn/zh/departments/academic-departments/industrial-design/staff/jie-sun">Jie
+                                href="https://scholar.google.com/citations?user=3l5B0joAAAAJ">Kaizhu Huang</a> and Prof. <a
+                                href="https://scholar.google.com/citations?user=c-x5M2QAAAAJ">Jie
                             Sun</a> at <a
                                 href="https://www.liverpool.ac.uk">University of Liverpool</a>. I'm bachelor-straight-to-doctorate student and got full scholarship.
                           My research background lies in computer vision and machine learning.
@@ -103,13 +103,12 @@
                     <td>
                         <heading>News</heading>
                         <ul>
+                            <li>Aug 2023 - Our papers accepted as Oral Presentation in ACM CIKM2023.
+                            </li>
                             <li>May 2023 - Our two journal papers accepted in IEEE TETCI and IJB.
                             </li>
                             <li>Apr 2023 - Our two journal papers accepted. Meanwhile, I am starting a new open source project <a
                                     href="https://github.com/Kaiseem/sd-webui-imageguard">ImageGuard</a>.
-                            </li>
-                            <li>Jan 2023 - We release the code for <a
-                                    href="https://github.com/Kaiseem/AD-GAN">AD-GAN</a>, under review.
                             </li>
                             <li>Nov 2022 - Our conference paper accepted in AAAI'23. We propose a novel augmentation for
                                 medical image domain generalization.
@@ -166,11 +165,11 @@
                                 </papertitle>
                             </a>
                             <br>
-                            <a href="https://www.xjtlu.edu.cn/zh/departments/academic-departments/industrial-design/staff/jie-sun">Jie Sun</a>,
+                            <a href="https://scholar.google.com/citations?user=c-x5M2QAAAAJ">Jie Sun</a>,
                             <strong>Kai Yao</strong>,
                             Jia An,
                             Linzhi Jing,
-                            <a href="http://www.premilab.com/KaizhuHUANG.ashx">Kaizhu Huang</a>,
+                            <a href="https://scholar.google.com/citations?user=3l5B0joAAAAJ">Kaizhu Huang</a>,
                             <a href="https://scholar.google.com/citations?hl=zh-CN&user=EKdoAtgAAAAJ">Dejian Huang</a>
                             <br>
                             <em>International Journal of Bioprinting (IJB)</em>, 2023
@@ -210,8 +209,8 @@
                             </a>
                             <br>
                             <strong>Kai Yao</strong>,
-                            <a href="http://www.premilab.com/KaizhuHUANG.ashx">Kaizhu Huang</a>,
-                            <a href="https://www.xjtlu.edu.cn/zh/departments/academic-departments/industrial-design/staff/jie-sun">Jie Sun</a>,
+                            <a href="https://scholar.google.com/citations?user=3l5B0joAAAAJ">Kaizhu Huang</a>,
+                            <a href="https://scholar.google.com/citations?user=c-x5M2QAAAAJ">Jie Sun</a>,
                             Amir Hussain,
                             Curran Jude
                             <br>
@@ -244,7 +243,7 @@
                             <a href="https://www.xjtlu.edu.cn/en/departments/academic-departments/intelligent-science/staff/xi-yang01">Xi Yang</a>,
                             Qiufeng Wang,
                             Yuyao Yan,
-                            <a href="http://www.premilab.com/KaizhuHUANG.ashx">Kaizhu Huang</a>,
+                            <a href="https://scholar.google.com/citations?user=3l5B0joAAAAJ">Kaizhu Huang</a>,
                             <br>
                             <em>IEEE Journal of Biomedical and Health Informatics (JBHI)</em>, 2023
 
@@ -268,12 +267,12 @@
                                 <papertitle>Machine Learning Methods in Skin Disease Recognition: A Systematic Review</papertitle>
                             </a>
                             <br>
-                            <a href="https://www.xjtlu.edu.cn/zh/departments/academic-departments/industrial-design/staff/jie-sun">Jie Sun</a>,
+                            <a href="https://scholar.google.com/citations?user=c-x5M2QAAAAJ">Jie Sun</a>,
                             <strong>Kai Yao</strong>,
                             Guangyao Huang,
                             Chengrui Zhang,
                             Mark Leach,
-                            <a href="http://www.premilab.com/KaizhuHUANG.ashx">Kaizhu Huang</a>,
+                            <a href="https://scholar.google.com/citations?user=3l5B0joAAAAJ">Kaizhu Huang</a>,
                             Xi Yang
                             <br>
                             <em>Processes</em>, 2023
@@ -316,8 +315,8 @@
                             <strong>Kai Yao*</strong>,
                             <a href="https://www.xjtlu.edu.cn/en/departments/academic-departments/intelligent-science/staff/xi-yang01">Xi Yang</a>,
                             <a href="http://www.premilab.com/QiufengWANG.ashx">Qiufeng Wang</a>,
-                            <a href="https://www.xjtlu.edu.cn/zh/departments/academic-departments/industrial-design/staff/jie-sun">Jie Sun</a>,
-                            <a href="http://www.premilab.com/KaizhuHUANG.ashx">Kaizhu Huang</a>
+                            <a href="https://scholar.google.com/citations?user=c-x5M2QAAAAJ">Jie Sun</a>,
+                            <a href="https://scholar.google.com/citations?user=3l5B0joAAAAJ">Kaizhu Huang</a>
                             <br>
                             (*equal contribution)
                             <br>
@@ -364,9 +363,9 @@
                             <strong>Kai Yao*</strong>,
                             <a href="https://scholar.google.com/citations?user=yYtjWX0AAAAJ">Penglei Gao*</a>,
                             <a href="https://www.xjtlu.edu.cn/en/departments/academic-departments/intelligent-science/staff/xi-yang01">Xi Yang</a>,
-                            <a href="https://www.xjtlu.edu.cn/zh/departments/academic-departments/industrial-design/staff/jie-sun">Jie Sun</a>,
+                            <a href="https://scholar.google.com/citations?user=c-x5M2QAAAAJ">Jie Sun</a>,
                             Rui Zhang,
-                            <a href="http://www.premilab.com/KaizhuHUANG.ashx">Kaizhu Huang</a>
+                            <a href="https://scholar.google.com/citations?user=3l5B0joAAAAJ">Kaizhu Huang</a>
                             <br>
                             (*equal contribution)
                             <br>
@@ -414,9 +413,9 @@
                             <br>
                             <strong>Kai Yao*</strong>,
                             <a href="https://scholar.google.com/citations?user=E-Mcb5AAAAAJ">Zixian Su*</a>,
-                            <a href="http://www.premilab.com/KaizhuHUANG.ashx">Kaizhu Huang</a>,
+                            <a href="https://scholar.google.com/citations?user=3l5B0joAAAAJ">Kaizhu Huang</a>,
                             <a href="https://www.xjtlu.edu.cn/en/departments/academic-departments/intelligent-science/staff/xi-yang01">Xi Yang</a>,
-                            <a href="https://www.xjtlu.edu.cn/zh/departments/academic-departments/industrial-design/staff/jie-sun">Jie Sun</a>,
+                            <a href="https://scholar.google.com/citations?user=c-x5M2QAAAAJ">Jie Sun</a>,
                             Amir Hussain,
                             Frans Coenen
                             <br>
@@ -446,9 +445,9 @@
                                 <papertitle>Machine learning applications in scaffold based bioprinting</papertitle>
                             </a>
                             <br>
-                            <a href="https://www.xjtlu.edu.cn/zh/departments/academic-departments/industrial-design/staff/jie-sun">Jie Sun</a>,
+                            <a href="https://scholar.google.com/citations?user=c-x5M2QAAAAJ">Jie Sun</a>,
                             <strong>Kai Yao</strong>,
-                            <a href="http://www.premilab.com/KaizhuHUANG.ashx">Kaizhu Huang</a>,
+                            <a href="https://scholar.google.com/citations?user=3l5B0joAAAAJ">Kaizhu Huang</a>,
                             <a href="https://scholar.google.com/citations?hl=zh-CN&user=EKdoAtgAAAAJ">Dejian Huang</a>,
                             <br>
                             <em>Materials Today: Proceedings</em>, 2022
@@ -491,8 +490,8 @@
                             </a>
                             <br>
                             <strong>Kai Yao</strong>,
-                            <a href="https://www.xjtlu.edu.cn/zh/departments/academic-departments/industrial-design/staff/jie-sun">Jie Sun</a>,
-                            <a href="http://www.premilab.com/KaizhuHUANG.ashx">Kaizhu Huang</a>,
+                            <a href="https://scholar.google.com/citations?user=c-x5M2QAAAAJ">Jie Sun</a>,
+                            <a href="https://scholar.google.com/citations?user=3l5B0joAAAAJ">Kaizhu Huang</a>,
                             Lingzhi Jing,
                             <a href="https://scholar.google.com/citations?user=DC9Ytm4AAAAJ">Hang Liu</a>,
                             <a href="https://scholar.google.com/citations?hl=zh-CN&user=EKdoAtgAAAAJ">Dejian Huang</a>,
@@ -533,8 +532,8 @@
                             </a>
                             <br>
                             <strong>Kai Yao</strong>,
-                            <a href="http://www.premilab.com/KaizhuHUANG.ashx">Kaizhu Huang</a>,
-                            <a href="https://www.xjtlu.edu.cn/zh/departments/academic-departments/industrial-design/staff/jie-sun">Jie Sun</a>,
+                            <a href="https://scholar.google.com/citations?user=3l5B0joAAAAJ">Kaizhu Huang</a>,
+                            <a href="https://scholar.google.com/citations?user=c-x5M2QAAAAJ">Jie Sun</a>,
                             Curran Jude
                             <br>
                             <em>Preprint, under review.</em>, 2021
@@ -563,7 +562,7 @@
                             </a>
                             <br>
                             <a href="https://scholar.google.com/citations?user=DC9Ytm4AAAAJ">Hang Liu</a>, Fan Wu, Renwei Chen, Yanan Chen, <strong>Kai Yao</strong>, Zengping Liu, Bhav
-                            Harshad Parikh, Linzhi Jing, Tiange Liu, Xinyi Su, <a href="https://www.xjtlu.edu.cn/zh/departments/academic-departments/industrial-design/staff/jie-sun">Jie Sun</a>, <a href="https://scholar.google.com/citations?hl=zh-CN&user=EKdoAtgAAAAJ">Dejian Huang</a>
+                            Harshad Parikh, Linzhi Jing, Tiange Liu, Xinyi Su, <a href="https://scholar.google.com/citations?user=c-x5M2QAAAAJ">Jie Sun</a>, <a href="https://scholar.google.com/citations?hl=zh-CN&user=EKdoAtgAAAAJ">Dejian Huang</a>
                             <br>
                             <em>International Journal of Bioprinting</em>, 2021
                             <p></p>
@@ -601,8 +600,8 @@
                             </a>
                             <br>
                             <strong>Kai Yao</strong>,
-                            <a href="http://www.premilab.com/KaizhuHUANG.ashx">Kaizhu Huang</a>,
-                            <a href="https://www.xjtlu.edu.cn/zh/departments/academic-departments/industrial-design/staff/jie-sun">Jie Sun</a>,
+                            <a href="https://scholar.google.com/citations?user=3l5B0joAAAAJ">Kaizhu Huang</a>,
+                            <a href="https://scholar.google.com/citations?user=c-x5M2QAAAAJ">Jie Sun</a>,
                             Lingzhi Jing,
                             <a href="https://scholar.google.com/citations?hl=zh-CN&user=EKdoAtgAAAAJ">Dejian Huang</a>,
                             Curran Jude
@@ -635,7 +634,7 @@
                             </a>
                             <br>
                             Lingzhi Jing,Mingtai Sun, Pingkang Xu, <strong>Kai Yao</strong>, Jiao Yang, Xiang Wang, Hang
-                            Liu, Minxuan Sun, Yao Sun, Runyan Ni, <a href="https://www.xjtlu.edu.cn/zh/departments/academic-departments/industrial-design/staff/jie-sun">Jie Sun</a>, <a href="https://scholar.google.com/citations?hl=zh-CN&user=EKdoAtgAAAAJ">Dejian Huang</a>
+                            Liu, Minxuan Sun, Yao Sun, Runyan Ni, <a href="https://scholar.google.com/citations?user=c-x5M2QAAAAJ">Jie Sun</a>, <a href="https://scholar.google.com/citations?hl=zh-CN&user=EKdoAtgAAAAJ">Dejian Huang</a>
                             <br>
                             <em>ACS Applied Bio Materials</em>, 2021
                             <p></p>
@@ -689,7 +688,7 @@
                                 </papertitle>
                             </a>
                             <br>
-                            <strong>Kai Yao</strong>, <a href="http://www.premilab.com/KaizhuHUANG.ashx">Kaizhu Huang</a>, Rui Zhang, Amir Hussain
+                            <strong>Kai Yao</strong>, <a href="https://scholar.google.com/citations?user=3l5B0joAAAAJ">Kaizhu Huang</a>, Rui Zhang, Amir Hussain
                             <br>
                             <em>International Conference on Neural Information Processing (ICONIP)</em>, 2018
                             <p></p>
